add wddebug() which dumps some status for attached disks; indended for debugging of PR kern/52783